<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:nctrafficcams="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/share_camera"
        android:icon="@drawable/ic_action_share"
        nctrafficcams:showAsAction="ifRoom"
        android:title="@string/share"/>
    <item
        android:id="@+id/show_on_map"
        android:icon="@drawable/ic_action_map"
        nctrafficcams:showAsAction="always"
        android:title="@string/show_location_on_map"/>
    <item
        android:id="@+id/refresh_camera"
        android:icon="@drawable/ic_action_refresh"
        nctrafficcams:showAsAction="ifRoom"
        android:title="@string/refresh"/>
    <item
        android:id="@+id/favorite"
        android:icon="@drawable/ic_action_favorite_off"
        nctrafficcams:showAsAction="always"
        android:title="@string/favorite"/>
    <item
        android:id="@+id/unfavorite"
        android:icon="@drawable/ic_action_favorite_on"
        nctrafficcams:showAsAction="always"
        android:title="@string/unfavorite"
        android:visible="false"/>
    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_action_settings"
        nctrafficcams:showAsAction="collapseActionView"
        android:title="@string/settings"/>
    <item
        android:id="@+id/about"
        android:icon="@drawable/ic_action_about"
        android:title="@string/about"
        nctrafficcams:showAsAction="collapseActionView"/>

</menu>